--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -503,6 +503,10 @@ div#metadata {
   text-align: justify;
   letter-spacing: 0px; }
 
+#about .intro-text-title {
+  text-align: center;
+  font-weight: 700; }
+
 #about h4 {
   letter-spacing: 0px; }
 
