--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -597,6 +597,13 @@ padding: 5px 5px 5px 20px;
 
 }
 
+#about .intro-text-title {
+  text-align: center;
+  font-weight: 700;
+
+
+}
+
 
 #about h4 {
 letter-spacing:0px;
